--- a/sections/data.tex
+++ b/sections/data.tex
@@ -111,21 +111,6 @@ Compared with linear regression, neural networks potentially are more prone to o
 The neural networks are trained for up to 70 training epochs with the gradient descent \textsc{Adam} optimizer \citep{2017arXiv171105101L}, which iteratively updates the neural network parameters following the gradient of the negative Poisson log-likelihood. The step size of the parameter updates is controlled via the learning rate hyper-parameter, which is initialized with a grid search and is designed to dynamically vary between two boundary values of $0.001$ and $0.1$ to avoid local minima \citep[see again,][]{2016arXiv160803983L}. At each training epoch, the neural network model is applied to the validation set, and ultimately the model with the best performance on validation is identified and applied to the test set. The neural network models are tested on the entirety of the LRG sample with the technique of permuting the choice of the training, validation, or testing sets \citep{arlot2010survey}. With the cross-validation technique, the model predictions from the different test sets are aggregated together to form the predicted target density map into the DESI footprint. To reduce the error in the predicted number counts, we train an ensemble of 20 neural network models and average over the predictions. The imaging weights are then defined as the inverse of the predicted target density, normalized to a median of unity.
 
 
-
-%\subsection{Characterization of remaining systematics}
-%\label{ssec:characterization}
-\mc{This paragraph is adapted from Section `3.4 characterization of remaining systematics' in the original manuscript, which is now partially moved to Appendix \ref{sec:systests}. The primary driver for this change was that we noticed an error in the covariances used for our validation tests. The error fix revealed that the validation tests (namely mean density and cross power spectrum) presented in Section 3.4 of the original manuscript depends on the value of fNL used in the mocks. In other words, the tests of residual systematics are fNL-dependent through the covariances.} One potential problem that can arise in the data-driven mitigation approach is \textit{over-correction}, which occurs when the corrections applied to the data remove the clustering signal and induce additional biases in the inferred parameter of interest. The neural network approach is more prone to this issue compared to the linear approach due to its increased degrees of freedom. As illustrated in the bottom panel of Figure \ref{fig:pcc}, the significant correlations among the imaging systematic maps may pose additional challenges for modeling the spurious fluctuations in the galaxy density field. Specifically, using highly correlated imaging systematic maps increases the statistical noise in the imaging weights, which elevates the potential for over subtracting the clustering power. These over-correction effects are estimated to have a negligible impact on baryon acoustic oscillations \citep{merz2021clustering}; however, they can significantly modulate the galaxy power spectrum on large scales, and thus lead to biased $\fnl$ constraints \citep{rezaie2021primordial, mueller2022primordial}. Although not explored thoroughly, the over-correction issues could limit the detectability of primordial features in the galaxy power spectrum and that of parity violations in higher order clustering statistics \citep{beutler2019primordial, cahn2021test, philcox2022probing}. Therefore, it is crucial to develop, implement, and apply techniques to minimize and control over-correction in the hope of ensuring that the constraints are as accurate and reliable as possible; one such approach is to reduce the dimensionality of the problem. Our goal is to reduce the correlations between the DESI LRG target density and the imaging systematic maps while controlling the over-correction effect. \mr{In Appendix \ref{sec:systests}}\mout{Below}, we describe how we \mout{achieve}\mr{approach} this objective, by employing a series of simulations along with the residual systematics that we construct based on the cross power spectrum between the LRG density and imaging maps, and the mean LRG density as a function of imaging. We test different sets of the imaging systematic maps to identify the optimal set of the feature maps:
-\begin{enumerate}[itemindent=*]
-\item \textbf{Two maps}: Extinction, depth in z.
-\item \textbf{Three maps}: Extinction, depth in z, psfsize in r.
-\item \textbf{Four maps}: Extinction, depth in z, psfsize in r, stellar density.
-\item \mout{\textbf{Five maps}: Extinction, depth in z, psfsize in r, neutral hydrogen density, and photometric calibration in z.}
-\item \textbf{Eight maps}: Extinction, depth in $grzW1$, psfsize in $grz$.
-\item \textbf{Nine maps}: Extinction, depth in $grzW1$, psfsize in $grz$, stellar density.
-\item \mr{\textbf{Eleven maps}: same as Nine maps but with two additional maps; Extinction, depth in $grzW1$, psfsize in $grz$, stellar density, neutral hydrogen density, and photometric calibration in z.}
-\end{enumerate}
-It is imperative to note that these sets are selected prior to examining the auto power spectrum of the LRG sample and unblinding the $\fnl$ constraints, and that the auto power spectrum and $\fnl$ measurements are unblinded only after our mitigation methods passed our rigorous tests for residual systematics \mr{(see Appendix \ref{sec:systests}). We discover that these tests tend to depend on the $\fnl$ value which is used in the mocks for the covariance matrix estimation. It is possible that these residual systematic tests only ever pass in a case where enough signal is removed to obtain $\fnl$ consistent with the value used in the mocks.}
-
 \subsection{Synthetic lognormal density fields}\label{ssec:mocks}
 Density fluctuations of galaxies on large scales can be approximated with lognormal distributions \citep{coles1991, 2017MNRAS.466.1444C}. Unlike N-body simulations, simulating lognormal density fields is not computationally intensive, and allows quick and robust validation of data analysis pipelines. Lognormal simulations are therefore considered efficient for our study since the signature of local PNG appears on large-scales and small-scale clustering is not used in our analysis. The package \textsc{FLASK} \citep[Full-sky Lognormal Astro-fields Simulation Kit;][]{Xavier_2016} is employed to generate ensembles of synthetic lognormal density maps that mimic the bias, redshift, and angular distributions of the DESI LRG targets, as illustrated in Figure \ref{fig:nz} and \ref{fig:ng}. Two universes with $\fnl=0$ and $76.9$ are considered. A set of 1000 realizations is produced for every $\fnl$. The mocks are designed to match the clustering signal of the DESI LRG targets on scales insensitive to $\fnl$. The analysis adapts the fiducial BOSS cosmology \citep{2017MNRAS.470.2617A} which assumes a flat $\Lambda$CDM universe, including one massive neutrino with $m_{\nu}=0.06$ eV, Hubble constant $h = 0.68$, matter density $\Omega_{M}=0.31$, baryon density $\Omega_{b}=0.05$, and spectral index $n_{s}=0.967$. The amplitude of the matter density fluctuations on a scale of $8 h^{-1} \text{Mpc}$ is set as $\sigma_{8}=0.8225$. The same fiducial cosmology is used throughout this paper unless specified otherwise. Our robustness tests show that the none of the cosmological parameters can produce a $\fnl$-like signatures, and therefore, our analysis is not sensitive to the choice of fiducial cosmology.
 
@@ -133,4 +118,4 @@ Density fluctuations of galaxies on large scales can be approximated with lognor
 \subsubsection{Contaminated mocks}
 We employ the linear multivariate model (Equation \ref{eq:npred}) to introduce synthetic spurious fluctuations in the lognormal density fields, and validate our imaging systematic mitigation methods. The motivation for choosing a linear contamination model is to assess how much of the clustering signal can be removed by applying more flexible models, based on neural networks, for correcting less severe imaging systematic effects. The imaging systematic maps considered for the contamination model are extinction, depth in z, and psfsize in r. As shown in the Pearson correlation (Figure \ref{fig:pcc}) and will be discussed later in Appendix \ref{sec:systests}, the DESI LRG targets correlate strongly with these three maps. We fit for the parameters of the linear models with the MCMC process, executed separately on each imaging survey (BASS+MzLS, DECaLS North, and DECaLS South). Then, the imaging selection function for contaminating each simulation is uniquely determined by randomly drawing from the parameter space probed by MCMC, and then the results from each imaging survey are combined to form the DESI footprint. The clean density is then multiplied by the contamination model to induce systematics.  The same contamination model is used for both the $\fnl=0$ and $76.9$ simulations.
 
-Similar to the imaging systematic treatment analysis for the DESI LRG targets, the neural network methods with various combinations of the imaging systematic maps are applied to each simulation, with and without PNG, and with and without systematics, to derive the imaging weights. Section \ref{sec:method} presents how the simulation results are incorporated to calibrate $\fnl$ biases due to over-correction. \mout{We briefly summarize two statistical tests based on the mean galaxy density contrast and the cross power spectrum between the galaxy density and the imaging systematic maps to assess the quality of the data and the significance of the remaining systematic effects} \cite[see, also,][]{rezaie2021primordial}. \mout{We calculate these statistics and compare the values to those measured from the clean mocks before looking at the auto power spectrum of the DESI LRG targets.}
+Similar to the imaging systematic treatment analysis for the DESI LRG targets, the neural network methods with various combinations of the imaging systematic maps are applied to each simulation, with and without PNG, and with and without systematics, to derive the imaging weights. Section \ref{sec:method} presents how the simulation results are incorporated to calibrate $\fnl$ biases due to over-correction. We briefly summarize two statistical tests based on the mean galaxy density contrast and the cross power spectrum between the galaxy density and the imaging systematic maps to assess the quality of the data and the significance of the remaining systematic effects (see, also, Rezaie et al. 2021). We calculate these statistics and compare the values to those measured from the clean mocks before looking at the auto power spectrum of the DESI LRG targets.
