--- a/sections/results.tex
+++ b/sections/results.tex
@@ -1,5 +1,5 @@
 \section{Results}\label{sec:results}
-We now present our $\fnl$ constraints obtained from the power spectrum of the DESI LRG targets. The treatment of the imaging systematic effects is performed on each imaging region (BASS+MzLS, DECaLS North/South) separately. After cleaning, the regions are combined for the measurement of the power spectrum. We unblind the galaxy power spectrum and the $\fnl$ values after our cleaning methods are validated and vetted by the cross power spectrum and mean galaxy density diagnostics. We also conduct additional tests to check the robustness of our constraints against various assumptions, such as analyzing each region separately, applying cuts on imaging conditions, and changing the smallest mode used in fitting for $\fnl$.
+We now present our $\fnl$ constraints obtained from the power spectrum of the DESI LRG targets. The treatment of the imaging systematic effects is performed on each imaging region (BASS+MzLS, DECaLS North/South) separately. After cleaning, the regions are combined for the measurement of the power spectrum. We unblind the galaxy power spectrum and the $\fnl$ values after our cleaning methods are validated and vetted by the cross power spectrum and mean galaxy density diagnostics. \mr{As presented in Appendix \ref{sec:systests}, these tests show that none of the linear methods yields reasonable statistics, and only the nonlinear approach with the nine maps can pass the criteria, which is why we select the nonlinear nine maps as our fiducial method for cleaning systematics.} We also conduct additional tests to check the robustness of our constraints against various assumptions, such as analyzing each region separately, applying cuts on imaging conditions, and changing the smallest mode used in fitting for $\fnl$.
 
 \subsection{DESI imaging LRG sample}
 \begin{figure}
@@ -25,7 +25,7 @@ We find that the excess clustering signal in the power spectrum of the DESI LRG 
 \raggedleft
 \includegraphics[width=0.45\textwidth]{figures/fnl_p.pdf}
 \includegraphics[width=0.437\textwidth]{figures/fnl_magbias.pdf}
-\caption{\mr{The best-fitting estimates of $\fnl$ and their corresponding $68\%$ ($95\%$) errors from the DESI LRG targets using the non-linear nine maps approach under various values of $p$ or $s$. The star symbol represents the fiducial analysis with $p=1$ and $s=0.945$.}}\label{fig:fnl_magbias}
+\caption{\mr{The best-fitting estimates of $\fnl$ and their corresponding $68\%$ ($95\%$) errors from the DESI LRG targets using the non-linear nine maps approach given various values of $p$ or $s$. The star symbol represents the fiducial analysis with $p=1$ and $s=0.945$.}}\label{fig:fnl_magbias}
 \end{figure}
 
 \begin{table*}
@@ -48,10 +48,12 @@ DESI & Nonlinear Nine Maps              & $    34$& $    24$& $   -10<\fnl<    5
 }
 \end{table*}
 
-All $\fnl$ constraints presented here are calibrated for the effect of over-correction using the lognormal simulations. Table \ref{tab:dr9methodcalib} describes the best-fitting and marginalized mean estimates of $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after cleaning with the non-linear approach given various combinations for the imaging systematic maps. Figure \ref{fig:mcmc_dr9} shows the marginalized probability distribution for $\fnl$ in the top panel, and the $68\%$ and $95\%$ probability contours for the linear bias parameter and $\fnl$ in the bottom panel, from our sample before and after applying various corrections for imaging systematics. Overall, we find the maximum likelihood estimates to be consistent among the various cleaning methods. We obtain \mr{$33 (21) < \fnl < 61(76)$} at $68\%(95\%)$ confidence with \mr{$\chi^{2}=33.9$} for \textit{non-linear three maps} with $34$ degrees of freedom. Accounted for over-correction, we obtain \mr{$33(19) < \fnl < 62(78)$ with $\chi^{2}=34.4$ using \textit{non-linear four maps} which includes the additional stellar density map}. With or without stellar density, the confidence intervals are consistent with each other and significantly off from zero PNG; specifically, the probability that $\fnl$ is greater than zero, $P(\fnl >0)=99.9$ per cent\mr{, which can be attributed to unanticipated systematics}. We also apply a more aggressive systematics treatment that includes regression using the non-linear approach against the full set of imaging maps we identified, \textit{non-linear nine maps}, and find that \mr{zero $\fnl$ is recovered. Specifically,} our maximum likelihood value changes \mout{only slightly} to \mr{$\fnl \sim 34$ with $\chi^{2}=39.1$}, \mout{but} \mr{and the uncertainty on $\fnl$ increases by more than a factor of two, resulting in $-10 (-39) < \fnl < 58 (84)$ at $68\% (95\%)$ confidence. This increase is attributed to the aggressive treatment, which removes large-scale clustering information and diminishes the constraining power of the dataset. Additionally, we explore the sensitivity of the $\fnl$ posterior using the non-linear nine maps method while varying the values of $p$ in the range of $0.5$ to $1.6$ and $s$ in the range of $0.75$ to $1.25$. Figure \ref{fig:fnl_magbias} illustrates our findings, and Table \ref{tab:dr9ps} provides a summary. Regardless of the values chosen for $p$ and $s$, we reliably recover $\fnl=0$ within the $95\%$ confidence interval.} For comparison, we obtain \mr{$102(86) < \fnl < 140(161)$} at $68\% (95\%)$ confidence with \mr{$\chi^{2}=45.1$} for the \textit{no weight} case.
+All $\fnl$ constraints presented here are calibrated for the effect of over-correction using the lognormal simulations. Table \ref{tab:dr9methodcalib} describes the best-fitting and marginalized mean estimates of $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after cleaning with the non-linear approach given various combinations for the imaging systematic maps. Figure \ref{fig:mcmc_dr9} shows the marginalized probability distribution for $\fnl$ in the top panel, and the $68\%$ and $95\%$ probability contours for the linear bias parameter and $\fnl$ in the bottom panel, from our sample before and after applying various corrections for imaging systematics. Overall, we find the maximum likelihood estimates to be consistent among the various cleaning methods. We obtain \mr{$33 (21) < \fnl < 61(76)$} at $68\%(95\%)$ confidence with \mr{$\chi^{2}=33.9$} for \textit{non-linear three maps} with $34$ degrees of freedom. Accounted for over-correction, we obtain \mr{$33(19) < \fnl < 62(78)$ with $\chi^{2}=34.4$ using \textit{non-linear four maps} which includes the additional stellar density map}. With or without stellar density, the confidence intervals are consistent with each other and significantly off from zero PNG; specifically, the probability that $\fnl$ is \mr{erroneously} greater than zero, $P(\fnl >0)=99.9$ per cent\mr{, which we attribute to systematics (see Appendix \ref{sec:systests})}. We also apply a more aggressive systematics treatment that includes regression using the non-linear approach against the set of nine imaging maps we identified, \textit{non-linear nine maps}, and find that \mr{zero $\fnl$ is recovered. Specifically,} our maximum likelihood value changes \mout{only slightly} to \mr{$\fnl \sim 34$ with $\chi^{2}=39.1$}, \mout{but} \mr{and the uncertainty on $\fnl$ increases by more than a factor of two, resulting in $-10 (-39) < \fnl < 58 (84)$ at $68\% (95\%)$ confidence. This increase is attributed to the aggressive treatment, which removes large-scale clustering information and diminishes the constraining power of the dataset.}
+
+\mr{Additionally, we explore the sensitivity of the $\fnl$ posterior using the non-linear nine maps method while varying the values of $p$ in the range of $0.5$ to $1.6$ and $s$ in the range of $0.75$ to $1.25$. Figure \ref{fig:fnl_magbias} illustrates our findings, and Table \ref{tab:dr9ps} provides a summary. Regardless of the specific values chosen for $p$ and $s$, we reliably recover $\fnl=0$ within the $95\%$ confidence interval. The top panel also implies that marginalizing over $p$ can induce projection effects and lead to biased $\fnl$ constraints.} For comparison, we obtain \mr{$102(86) < \fnl < 140(161)$} at $68\% (95\%)$ confidence with \mr{$\chi^{2}=45.1$} for the \textit{no weight} case.
 
 \begin{table*}
-    \caption{\mr{The calibrated best-fitting, marginalized mean, and marginalized $68\%$ ($95\%$) confidence estimates for $\fnl$ from the DESI LRG targets after non-linear nine maps and various values of $p$ and $s$.}}
+    \caption{\mr{The calibrated best-fitting, marginalized mean, and marginalized $68\%$ ($95\%$) confidence estimates for $\fnl$ from the DESI LRG targets cleaned with the non-linear nine maps approach, given various values of $p$ and $s$. The fiducial analysis uses $p=1$ and $s=0.945$ (DESI footprint).}}
     \label{tab:dr9ps}
    \centerline{%     
     \begin{tabular}{llllll}
@@ -89,16 +91,16 @@ $s=$ 0.75                                    & $    42$& $    31$& $    -1<\fnl<
 \end{table*}
 
 \subsubsection{Uncalibrated constraints: robustness tests}
-Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal aggressively and return biased $\fnl$ constraints. \mout{As expected, non-linear nine maps yields the smallest maximum likelihood estimate of \mr{$\fnl=-13$}}. The non-linear three maps approach returns a best-fitting estimate of \mr{$\fnl=27$} with the $68\%(95\%)$ confidence of \mr{$17(6)<\fnl <40(53)$} and \mr{$\chi^{2}=33.9$}. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of \mr{$\fnl=14$} with the error of \mr{$5(-6)<\fnl<26(38)$}. The non-linear nine maps gives an \mr{asymmetric} posterior with the marginalized mean \mr{$\fnl=-17$}, \mr{and the smallest best-fitting} estimate \mr{of $\fnl=-13$} with the error of \mr{$-31(-44)<\fnl<-3(9)$}. \mr{The disparities in the best-fitting estimates can be linked to over-correction, mirroring the effects observed in the mocks (refer to Figure \ref{fig:contmcmc}). Consequently, caution is advised when considering the uncalibrated values. Without adjusting for over-correction, non-linear four maps and non-linear nine maps recover zero $\fnl$ within $95\%$ and $68\%$ confidence, respectively. However, the non-linear method with three maps exhibits tension with $\fnl=0$ at a confidence level of $99.5$ percent.}
+Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal aggressively and return biased $\fnl$ constraints. \mout{As expected, non-linear nine maps yields the smallest maximum likelihood estimate of $\fnl=-13$}. The non-linear three maps approach returns a best-fitting estimate of \mr{$\fnl=27$} with the $68\%(95\%)$ confidence of \mr{$17(6)<\fnl <40(53)$} and \mr{$\chi^{2}=33.9$}. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of \mr{$\fnl=14$} with the error of \mr{$5(-6)<\fnl<26(38)$}. The non-linear nine maps gives an \mr{asymmetric} posterior with the marginalized mean \mr{$\fnl=-17$}, \mr{and the smallest best-fitting} estimate \mr{of $\fnl=-13$} with the error of \mr{$-31(-44)<\fnl<-3(9)$}. \mr{The disparities in the best-fitting estimates can be linked to over-correction, mirroring the effects observed in the mocks (refer to Figure \ref{fig:contmcmc}). Consequently, caution is advised when considering the uncalibrated values. Without adjusting for over-correction, non-linear four maps and non-linear nine maps recover zero $\fnl$ within $95\%$ and $68\%$ confidence, respectively. However, the non-linear method with three maps exhibits tension with $\fnl=0$ at a confidence level of $99.5$ percent.}
 
 \begin{table*}
-    \caption{The uncalibrated best-fitting and marginalized mean estimates for $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after correcting for systematics. The estimates are not calibrated for over-correction, and thus are subject to mitigation systematics. The number of degrees of freedom is 34 (37 data points - 3 parameters). The lowest mode is $\ell=2$\mr{, $p=1$,} and the covariance matrix is from the $\fnl=0$ clean mocks (no mitigation) except for the case with '+ Cov' in which the covariance matrix is from the $\fnl=76.9$ clean mocks (no mitigation). \mr{We fix $s=0.945$ for DESI, $0.943$ for DECaLS North (and South), and $0.951$ for BASS+MzLS.}}
+    \caption{The uncalibrated best-fitting and marginalized mean estimates for $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after correcting for systematics. The estimates are not calibrated for over-correction, and thus are subject to mitigation systematics. The number of degrees of freedom is 34 (37 data points - 3 parameters). The lowest mode is $\ell=2$ and the covariance matrix is from the $\fnl=0$ clean mocks (no mitigation) except for the case with '+ Cov' in which the covariance matrix is from the $\fnl=76.9$ clean mocks (no mitigation). \mr{We fix $p=1$ for all cases and $s=0.945$ for DESI, $0.943$ for DECaLS North (and South), and $0.951$ for BASS+MzLS.}}
     \label{tab:dr9method}
-   \centerline{%     
-    \begin{tabular}{llllllr}
+   %\centerline{%     
+    \begin{tabular}{lllllll}
     \hline
     \hline
-   &  & 	&   &  $\fnl$ + Mitigation Systematics &  &  \\
+   &  & &  &  $\fnl$ + Mitigation Systematics   & &  \\
    \cmidrule(r{.7cm}){3-6}
 Footprint                               & Method & 	Best fit  & Mean & $ 68\%$ CL & $ 95\%$ CL & $\chi^{2}$ (dof=$34$) \\
     \hline
@@ -133,9 +135,9 @@ DECaLS South & Nonlinear Four Maps      & $   -42$& $    -5$& $   -44<\fnl<    2
 DECaLS South (imag. cut) & Nonlinear Nine Maps& $   -57$& $   -55$& $   -76<\fnl<   -36$& $   -96<\fnl<    -8$ &   30.0\\
 DECaLS South (comp. cut) & Nonlinear Nine Maps& $   -42$& $   -40$& $   -58<\fnl<   -22$& $   -76<\fnl<    -1$ &   30.4\\
 DECaLS South (no DEC cut) & Nonlinear Nine Maps& $    -2$& $   -10$& $   -31<\fnl<    10$& $   -50<\fnl<    26$ &   26.1\\
-DECaLS South & Nonlinear Eleven Maps        & $   -38$& $   -35$& $   -52<\fnl<   -16$& $   -70<\fnl<     5$ &   32.3\\    
+DECaLS South & Nonlinear Eleven Maps        & $   -38$& $   -35$& $   -52<\fnl<   -16$& $   -70<\fnl<     5$ &   32.3\\
    \hline
-    \end{tabular}}
+    \end{tabular}%}
 \end{table*}
 
 
